reto1/deployment-pyhton.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-python-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-python
  template:
    metadata:
      labels:
        app: fastapi-python
    spec:
      containers:
      - name: fastapi-python
        image: frankgallo/reto1:pyhton
        ports:
        - containerPort: 8000
