reto1/service-python.yml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app: python
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
