reto1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  rules:
  - host: java-python
    http:
      paths:
      - path: /java
        pathType: Prefix
        backend:
          service:
            name: java-service
            port:
              number: 80
      - path: /python
        pathType: Prefix
        backend:
          service:
            name: python-service
            port:
              number: 80
